# traininglogs

./: .editorconfig  .env  .env.example  .gitignore  .setup-complete.md  ARCHITECTURE.md  CLAUDE.md  CLI_PROMPTS_REFERENCE.md  CONTRIBUTING.md  DEV_STATUS.md  IMPLEMENTATION_CHECKLIST.md  PERSISTENCE.md  PERSISTENCE_CHECKLIST.md  PERSISTENCE_GUIDE.md  PERSISTENCE_IMPLEMENTATION.md  PERSISTENCE_QUICK_REF.md  PROCESS_MAP.md  QUICK_START.md  README.md  README_REDESIGN.md  REDESIGN_SUMMARY.md  TASK_6_1_COMPLETE.md  docker-compose.yml  models_definition_only.py  pyproject.toml  test_persistence.py  test_persistence_complete.py
.agent/: PROTOCOL.md  README.md
dashboard/: index.html
data_class_model/: models.py  models_definition_only.py  models_definition_only_without_comments.py  pyproject.toml
datamodels/: models.py  models_definition_only_without_comments.py  validators.py
docs/: DATA_PERSISTENCE.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  MOBILE_CLI_ARCHITECTURE.md  PHONE_GYM_SETUP.md  README.md  architecture.md  database.md  session_flow.md
input_training_logs_md/: legs_hypertrophy_foundation_block.md  test_input.md  upper_strength_foundation_block.md
later/: recovery_nutrition_schema.jsonc  text_log_template.txt  training_log_parser.py  training_session_log_schema.jsonc  upper_str.txt  upper_strength.txt
markdowntemplate/: template.md
nosqlschema/: training_session_log_schema.jsonc
output_training_logs_json/: 2025-10-13_upper-strength_7.json  2025-10-15_lower-strength_7.json  2025-10-17_push-hypertrophy_7.json  2025-10-19_legs-hypertrophy_7.json  session_output.json
parser/: ingester.py  one_extract_relevant_fields.py  parser.py  two_parse_relevant_fields_into_objects.py
processer/: processer.py
processor/: processor.py
scripts/: build_dashboard.py  cleanup_reorganization.sh  import_json_to_db.py  import_json_to_db_v2.py  init_db.py  process_and_commit.py
src/: README.md  exceptions.py  models.py
tests/: test_agent_controller_service.py  test_api.py  test_architecture_determinism.py  test_conversational_ai_service.py  test_db.py  test_db_v2.py  test_import_v2.py  test_mobile_cli_components.py  test_models.py  test_models_v2.py  test_processor_v2.py  test_queries.py  (+2 more)
(+415 files in other folders)
