[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traininglogs-cli"
version = "0.1.0"
description = "Interactive CLI workout logging system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Apoorva Sharma"}
]

dependencies = []

[project.optional-dependencies]
dev = ["black==23.12.0", "ruff==0.1.8", "pytest>=8.0.0"]
cloud = ["psycopg[binary]>=3.1.0"]
llm = ["openai>=1.40.0"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
