[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "traininglogs"
version = "0.1.0"
description = "Parse and process training session logs into structured JSON."
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
traininglogs = "traininglogs.processor.processor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
