[tool.poetry]
name = "training_log_model"
version = "0.1.0"
description = "Dataclass models for training session logs"
authors = ["user <user@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
